--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -27,6 +27,10 @@ jobs:
         run: |
           docker-compose -f docker/docker-compose-unittest.yml up -d
 
+      - name: Rename application.yml
+        run: |
+          mv src/main/resources/application-unittest.yml src/main/resources/application.yml
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
