--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,13 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Code Check
+name: Test Server Build
 
 on:
   workflow_dispatch:
   push:
     branches:
+      - main
 
 jobs:
   test:
@@ -38,10 +39,19 @@ jobs:
           distribution: 'corretto'
           cache: gradle
 
-      - name: Test Spring project
+      - name: Test and Build Spring project
         run: |
-          gradle test
+          gradle build
 
-      - name: Stop Docker Compose Environment
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./build/reports/test/jacocoTestReport.xml
+          fail_ci_if_error: true
+
+      - name: Build and push docker image
         run: |
-          docker-compose -f docker/docker-compose-unittest.yml down
+          docker login registry.cn-hangzhou.aliyuncs.com --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
+          docker build -f docker/spring/Dockerfile -t registry.cn-hangzhou.aliyuncs.com/ziqiang_studio/teamup-pub:chat-test .
+          docker push registry.cn-hangzhou.aliyuncs.com/ziqiang_studio/teamup-pub:chat-test
