--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,3 +60,21 @@ jobs:
           docker login registry.cn-hangzhou.aliyuncs.com --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
           docker build -f docker/spring/Dockerfile -t registry.cn-hangzhou.aliyuncs.com/ziqiang_studio/teamup-pub:chat-test .
           docker push registry.cn-hangzhou.aliyuncs.com/ziqiang_studio/teamup-pub:chat-test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      - name: deploy docker image
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.TEST_SSH_HOST }}
+          username: ${{ secrets.TEST_SSH_USERNAME }}
+          password: ${{ secrets.TEST_SSH_PASSWORD }}
+          script: |
+            cd ~/backend-test
+            docker login registry.cn-hangzhou.aliyuncs.com --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
+            docker compose pull
+            docker compose up -d --remove-orphans
+            docker image prune -f
