--- a/docker/spring/Dockerfile
+++ b/docker/spring/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /etc/spring
 
 EXPOSE 8060
 
-HEALTHCHECK --interval=30s --timeout=3s --retries=3 CMD curl -f http://localhost:8060 || exit 1
+HEALTHCHECK --interval=30s --timeout=3s --retries=3 CMD curl http://localhost:8060 || exit 1
 
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/etc/spring/app.jar"]
 
